--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 build/
 DerivedData/
 
+# Private Keys
+*.pem
+
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -44,6 +47,7 @@ playground.xcworkspace
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+
 Pods/
 
 # Carthage
